--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,8 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "google-adk",
+    "google-genai>=1.22.0",
+    "openai>=1.93.0",
     "python-dotenv",
+    "python-telegram-bot>=22.1",
 ]
