--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,9 @@ requires-python = ">=3.10"
 dependencies = [
     "google-adk",
     "google-genai>=1.22.0",
+    "instagrapi>=2.1.5",
     "openai>=1.93.0",
+    "pillow>=8.1.1",
     "python-dotenv",
     "python-telegram-bot>=22.1",
 ]
