--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "aiograpi>=0.0.4",
     "google-adk",
     "google-genai>=1.22.0",
     "instagrapi>=2.1.5",
